# kridtbot

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  gz_params.yaml  joy_params.yaml  my_controllers.yaml  my_trajectory_controller.yaml  view_robot.rviz
description/: depth_camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_sim.urdf.xacro  ros2_control.xacro  ros2_control_gz.xacro  ros2_control_gz_imu.xacro  ros2_control_gz_myactuator.xacro  ros2_control_gz_odrive.xacro  ros2_control_imu.xacro  ros2_control_myactuator.xacro  ros2_control_odrive.xacro  werwerewer.xacro
hardware/: imu_sensor.cpp
hardware/include/kridtbot/: imu_sensor.hpp
launch/: joystick.launch.py  launch_imu.launch.py  launch_lin.launch.py  launch_rover.launch.py  launch_sim.launch.py  rsp.launch.py  rsp_sim.launch.py
meshes/: base_link.STL  diff_link.STL  front_left_lin_link.STL  imu_link.STL  left_diff_link.STL  left_front_rev_link.STL  left_rear_lin_link.STL  left_rear_rev_link.STL  mid-360-asm copy.STL  mid-360-asm.STL  right_front_lin_link.STL  right_front_rev_link.STL  right_rear_lin_link.STL  right_rear_rev_link.STL  rigth_diff_link.STL
nodes/: linear_position_pub.cpp
worlds/: empty.world
